--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1> Downloads </h1>
         <ul>
-            <li><a id="http://blog.nogizaka46.com/miona.hori/" href="miona.hori/blog.nogizaka46.com/index.html"> 乃木坂46 堀未央奈 公式ブログ </a></li>
+            <li><a id="http://blog.nogizaka46.com/miona.hori/" href="blog.nogizaka46.com/miona.hori/index.html"> 乃木坂46 堀未央奈 公式ブログ </a></li>
         </ul>
     </body>
 </html>
