--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     <div id="dialogWrap">
         <div id="dialogWrapCell">
             <div id="mainDialog">
-                <div id="dialogText">This page is password protected.</div>
+                <div id="dialogText">未央奈Blog</div>
                 <div id="passArea">
-                    <p id="passwordPrompt">Password</p>
+                    <p id="passwordPrompt">密碼(未央奈の日)</p>
                     <input id="pass" type="password" name="pass" autofocus>
                     <div>
                         <span id="messageWrapper">
@@ -121,7 +121,7 @@
                             <span id="success" class="notifyText">Success!</span>
                             &nbsp;
                         </span>
-                        <button id="submitPass" type="button">Submit</button>
+                        <button id="submitPass" type="button">送出</button>
                         <div style="clear: both;"></div>
                     </div>
                 </div>
